# savanamed

./: Dockerfile  LICENSE  README.md  docker-compose.yml  mypy.ini  pyproject.toml  wsgi.py
savanamed/: __init__.py  config.py  db.py
savanamed/pdf2text/: __init__.py  routes.py
savanamed/pdf2text/adapters/: database.py  pdfconverter.py  text.py
savanamed/pdf2text/interfaces/: database.py  pdfconverter.py  text.py
savanamed/service_status/: routes.py
tests/: conftest.py
tests/pdf2text/: test_integration.py
tests/pdf2text/adapters/: test_pdf_converter_adapter.py  test_text_adapter.py
tests/service_status/: test_status_page.py
